# my-home-theater

./: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  config.example.yaml  environment.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: a1f3c9d27e54_kind_scoped_ids_and_ml_features.py  c25bff6e1243_initial_schema.py  e7b2d84f10aa_candidate_season.py
deploy/: com.homeTheater.app.plist  home-theater.service
docs/: SKILLS.md  my-home-theater-plan.md  subtitles-native.md  torrent-backend.md
src/homeTheater/: __init__.py  errors.py  features.py  logging_setup.py  main.py  pipeline.py  preferences.py  taste.py  trakt.py
src/homeTheater/acquisition/: __init__.py  arr.py  base.py  naming.py  service.py
src/homeTheater/api/: __init__.py  app.py  auth.py  candidates.py  catalog.py  health.py  insights.py  pipeline.py  settings.py  status.py  subtitles.py  templates.py  web.py  webhooks.py
src/homeTheater/backup/: __init__.py  service.py
src/homeTheater/config/: __init__.py  loader.py  runtime.py  settings.py
src/homeTheater/dashboard/: __init__.py  queries.py
src/homeTheater/db/: __init__.py  base.py  models.py  session.py
src/homeTheater/discovery/: __init__.py  actions.py  filters.py  service.py  sources.py
src/homeTheater/health/: __init__.py  checks.py
src/homeTheater/metadata/: __init__.py  cache.py  dto.py  http.py  omdb.py  service.py  (+1 more)
tests/: conftest.py  test_acquisition.py  test_auth.py  test_backup.py  test_candidates_api.py  test_config.py  test_dashboard.py  test_discovery.py  test_discovery_filters.py  test_hardening.py  test_health.py  test_metadata.py  test_naming.py  test_new_seasons.py  test_notifications.py  test_omdb_parse.py  test_parse.py  test_pipeline.py  test_preferences.py  test_reconcile.py  test_runtime_settings.py  test_scanner.py  test_scheduler.py  test_state_machine.py  test_subtitles.py  test_subtitles_dashboard.py  test_subtitles_native.py  test_taste.py  test_torrent.py  test_torrent_season.py  test_trakt.py
(+48 files in other folders)
