[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-home-theater"
version = "0.1.0"
description = "Automate a personal movie & TV library: catalog, discovery, subtitles, source-agnostic acquisition, and a dashboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Idan Kligvasser" }]

# NOTE: dependencies are installed via conda `environment.yaml` (preferred).
# They are mirrored here so `pip install -e .` also works for tooling/CI.
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "httpx",
    "smbprotocol",
    "guessit",
    "apscheduler",
    "pyyaml",
    "structlog",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "black",
    "mypy",
    "types-PyYAML",
    "pre-commit",
]

[project.scripts]
home-theater = "homeTheater.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
homeTheater = ["web/templates/*.html", "web/static/*.css"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
packages = ["homeTheater"]
mypy_path = "src"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["guessit.*", "smbprotocol.*", "smbclient.*", "apscheduler.*", "sklearn.*", "joblib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
